--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -34,3 +34,9 @@
 .VPHomeHero .VPImage {
   max-width: 160px;
 }
+
+.video {
+  border-radius: 12px;
+  overflow: hidden;
+  border: 3px solid rgb(60, 60, 67);
+}
