--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -38,5 +38,46 @@
 .video {
   border-radius: 12px;
   overflow: hidden;
-  border: 3px solid rgb(60, 60, 67);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.package {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.package h3 {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.package h3 img {
+  width: 2rem;
+}
+
+.package p {
+  margin-left: 1rem;
+  padding-left: 1rem;
+  border-left: 1px solid var(--vp-c-divider);
+}
+
+.schema {
+  margin: 3rem auto;
+}
+
+.schema-stitcher {
+  max-width: 400px;
+}
+
+.schema-dashboard {
+  max-width: 300px;
+}
+
+.details.minimal {
+  background-color: transparent;
+  padding: 0;
 }
