--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -4,9 +4,17 @@
   --vp-c-brand-3: #ff7400;
 
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #ff4d00 30%, #ff9a00);
+  --vp-home-hero-name-background: -webkit-linear-gradient(
+    120deg,
+    #ff4d00 30%,
+    #ff9a00
+  );
 
-  --vp-home-hero-image-background-image: linear-gradient(-45deg, rgba(255, 77, 0, .2) 40%, rgba(255, 154, 0, .2) 40%);
+  --vp-home-hero-image-background-image: linear-gradient(
+    -45deg,
+    rgba(255, 77, 0, 0.2) 40%,
+    rgba(255, 154, 0, 0.2) 40%
+  );
   --vp-home-hero-image-filter: blur(44px);
 }
 
@@ -69,4 +77,35 @@
 
 .package div {
   margin-left: 2rem;
+}
+
+.video {
+  border-radius: 1rem;
+  width: 100%;
+}
+
+.number {
+  width: 1.5rem;
+  height: 1.5rem;
+  font-size: 0.85rem;
+  color: #ffffff;
+  background-color: #000000;
+  border-radius: 100%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 0.5rem;
+  text-align: center;
+  font-weight: bold;
+}
+
+h1, h2, h3 {
+  display: flex;
+  align-items: center;
+}
+
+.image {
+  border-radius: 1rem;
+  width: 100%;
+  border: 2px solid #f1f1f1;
 }
